test/sema/typeck/generic/arguments-mismatch-too-few.out
error: expected 1 type parameters but got 0.
--> arguments-mismatch-too-few.dora:3:14
 | class A[T]
 | fn foo() {
 |     let _a = A();
                ~~~
 | }
 | 
1 error found.
