test/sema/typeck/generic/arguments-mismatch-too-few.dora
class A[T]
fn foo() {
    let _a = A();
}
